--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,4 +1,56 @@
 #chat-window {
   height: 95vh;
   background-color: lightblue;
+  width: 80%;
+  position: absolute;
+  right: 0;
+}
+
+#inputBar {
+  display: flex;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+#inputDefault {
+  display: inline;
+  margin: 18px 0.5rem;
+}
+
+.btn {
+  margin: 0.5rem 0.5rem;
+}
+
+body {
+  background-color: #333744;
+}
+
+#formWindow {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: #333333;
+  background-color: #333333;
+}
+
+.signupform {
+  border-radius: 16px;
+  min-width: 400px;
+  width: 30%;
+  position: absolute;
+  top: 10%;
+}
+
+.card-title {
+  text-align: center;
+}
+
+#signup-button {
+  width: 100%;
+  margin: 2px 0;
+}
+
+.form-control {
+  margin: 0.1rem 0 0.4rem 0;
 }
