--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,9 +1,17 @@
 #chat-window {
-  height: 95vh;
-  background-color: lightblue;
-  width: 80%;
+  height: 100vh;
+  width: calc(100% - 300px);
   position: absolute;
   right: 0;
+}
+
+#currentUsers {
+  height: 100vh;
+  background-color: #333744;
+  position: absolute;
+  color: white;
+  text-align: center;
+  width: 300px;
 }
 
 #inputBar {
@@ -14,30 +22,26 @@
 }
 
 #inputDefault {
-  display: inline;
-  margin: 18px 0.5rem;
+  height: 56px;
+  margin: 8px 0.5rem;
 }
 
 .btn {
   margin: 0.5rem 0.5rem;
 }
 
-body {
-  background-color: #333744;
-}
-
 #formWindow {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
-  background: #333333;
-  background-color: #333333;
+  background-color: #333744;
 }
 
 .signupform {
   border-radius: 16px;
-  min-width: 400px;
-  width: 30%;
+  width: 400px;
+  box-shadow: 0px 0px 30px #2a2d37;
   position: absolute;
   top: 10%;
 }
