--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -59,6 +59,22 @@
   top: 10%;
 }
 
+@media (max-width: 700px) {
+  .signupform {
+    width: calc(100% - 30px);
+  }
+
+  #currentUsers {
+    display: none;
+  }
+
+  #chat-window {
+    width: 100%;
+    position: absolute;
+    right: 0;
+  }
+}
+
 .card-title {
   text-align: center;
 }
